[Show][Android]first commit.

--- a/Android/app/src/main/res/layout/item_home_index.xml
+++ b/Android/app/src/main/res/layout/item_home_index.xml
@@ -2,21 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:layout_gravity="center"
-    android:background="@mipmap/bg_app_def_white">
+    android:padding="5dp"
+    tools:background="@mipmap/bg_app_def_white">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivScenesBg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@mipmap/bg_btn_home1"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="3:4"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivScenesIcon"
