--- a/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
+++ b/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:paddingTop="46dp"
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.appcompat.widget.AppCompatImageView
