--- a/Android/common/ui-widget/src/main/res/values/themes.xml
+++ b/Android/common/ui-widget/src/main/res/values/themes.xml
@@ -67,12 +67,12 @@
 
     <style name="title_view">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">70dp</item>
-        <item name="android:paddingTop">38dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
         <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="layout_constraintTop_toTopOf">parent</item>
         <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="android:fitsSystemWindows">true</item>
     </style>
 
 </resources>
