--- a/Android/scenes/show/src/main/res/layout/show_room_item.xml
+++ b/Android/scenes/show/src/main/res/layout/show_room_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_margin="5dp"
+    android:padding="7.5dp"
     android:layout_height="wrap_content">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -62,6 +62,7 @@
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/tvRoomId"
         app:layout_constraintEnd_toEndOf="parent"
+        android:drawablePadding="5dp"
         app:layout_constraintStart_toEndOf="@id/tvRoomId"
         tools:text="@string/show_user_count" />
 
