--- a/Android/scenes/show/src/main/res/layout/show_room_list_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_room_list_activity.xml
@@ -29,7 +29,7 @@
             android:id="@+id/rvRooms"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="5dp"
+            android:paddingHorizontal="7.5dp"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
