[ShowLive][Android]add top layout and bottom layout to live detail page.

--- a/Android/scenes/show/src/main/res/layout/show_live_detail_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_activity.xml
@@ -1,6 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <include
+        android:id="@+id/videoSinglehostLayout"
+        layout="@layout/show_live_detail_video_singlehost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="visible" />
+
+    <include
+        android:id="@+id/videoLinkingLayout"
+        layout="@layout/show_live_detail_video_link"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <include
+        android:id="@+id/videoPKLayout"
+        layout="@layout/show_live_detail_video_pk"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <include
+        android:id="@+id/messageLayout"
+        layout="@layout/show_live_detail_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/bottomLayout" />
+
+    <include
+        android:id="@+id/topLayout"
+        layout="@layout/show_live_detail_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp" />
+
+    <include
+        android:id="@+id/bottomLayout"
+        layout="@layout/show_live_detail_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
