[Android]1.add user service and ui; 2.add message service and ui.

--- a/Android/scenes/show/src/main/res/layout/show_live_detail_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_activity.xml
@@ -33,7 +33,7 @@
         android:id="@+id/messageLayout"
         layout="@layout/show_live_detail_message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="220dp"
         app:layout_constraintBottom_toTopOf="@id/bottomLayout" />
 
     <include
