--- a/Android/scenes/show/src/main/res/values/themes.xml
+++ b/Android/scenes/show/src/main/res/values/themes.xml
@@ -11,4 +11,11 @@
         <item name="cornerSize">50%</item>
     </style>
 
+
+    <style name="show_text_input_dialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:backgroundDimAmount">0</item>
+    </style>
+
 </resources>
