--- a/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
+++ b/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
@@ -32,7 +32,8 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_center_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
+        android:gravity="center"
         android:textColor="@color/def_text_color_040"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_back_icon"
