[Android]fix common title view display bug.

--- a/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="@mipmap/bg_app_def_white"
     android:paddingBottom="20dp">
 
