--- a/Android/scenes/show/src/main/res/layout/show_widget_music_effect_item_02.xml
+++ b/Android/scenes/show/src/main/res/layout/show_widget_music_effect_item_02.xml
@@ -28,12 +28,11 @@
             android:src="@drawable/show_music_effect_item_bg"/>
 
 
-
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/show_music_effect_item_text_bg"
             android:textSize="12sp"
             android:layout_gravity="center"
             android:gravity="center"
