--- a/Android/scenes/show/src/main/res/layout/show_live_detail_video_link.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_video_link.xml
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/show_live_dialog_view_bg"
+    android:orientation="vertical">
 
+<RadioGroup
+    android:id="@+id/radioGroup"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="72dp"
+    android:layout_marginTop="23dp"
+    android:orientation="horizontal"
+    app:layout_constraintStart_toStartOf="parent"
+    android:checkedButton="@id/rBtnRequestMessage"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <androidx.appcompat.widget.AppCompatRadioButton
+        android:id="@+id/rBtnRequestMessage"
+        android:layout_width="64dp"
+        android:layout_height="22dp"
+        android:button="@null"
+        android:gravity="center"
+        android:text="@string/show_linking_request_message"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
+    <androidx.appcompat.widget.AppCompatRadioButton
+        android:id="@+id/rBtnOnlineUser"
+        android:layout_width="64dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="130dp"
+        android:button="@null"
+        android:gravity="center"
+        android:text="@string/show_online_audience"
+        android:textColor="@color/grey_to_white"
+        android:textSize="16sp" />
+</RadioGroup>
+
+<androidx.viewpager2.widget.ViewPager2
+    android:id="@+id/pager"
+    android:layout_width="match_parent"
+    android:layout_height="500dp"
+    android:overScrollMode="never"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
