--- a/Android/app/src/main/res/layout/app_activity_phone_login.xml
+++ b/Android/app/src/main/res/layout/app_activity_phone_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="101dp"
-        android:text="@string/welcome_experience"
+        android:text="@string/app_welcome_experience"
         android:textColor="@color/def_text_color_040"
         android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="@string/mobile_number"
+        android:text="@string/app_mobile_number"
         android:textColor="@color/def_text_grey_979"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/tvAppName"
@@ -33,7 +33,7 @@
         style="@style/def_et_input"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="49dp"
-        android:hint="@string/please_input_account"
+        android:hint="@string/app_please_input_account"
         android:inputType="phone"
         android:paddingStart="83dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:layout_marginStart="20dp"
         android:drawableEnd="@mipmap/ic_arrow_down"
         android:elevation="2dp"
-        android:text="@string/plus_86"
+        android:text="@string/app_plus_86"
         android:textColor="@color/def_text_color_040"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@id/etAccounts"
@@ -84,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="@string/v_code"
+        android:text="@string/app_v_code"
         android:textColor="@color/def_text_grey_979"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/etAccounts"
@@ -94,7 +94,7 @@
         android:id="@+id/etVCode"
         style="@style/def_et_input"
         android:layout_marginTop="49dp"
-        android:hint="@string/please_input_v_code"
+        android:hint="@string/app_please_input_v_code"
         android:inputType="phone"
         android:maxLength="6"
         app:layout_constraintEnd_toEndOf="@id/etAccounts"
@@ -131,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="@string/user_agreement"
+        android:text="@string/app_user_agreement"
         android:textColor="@color/blue_9F"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/cvIAgree"
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:button="@drawable/bg_cb_check_status_def"
-        android:text="@string/and"
+        android:text="@string/app_and"
         android:textColor="@color/def_text_grey_6c7"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/tvUserAgreement"
@@ -156,7 +156,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="@string/privacy_agreement"
+        android:text="@string/app_privacy_agreement"
         android:textColor="@color/blue_9F"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/tvAnd"
@@ -170,7 +170,7 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="23dp"
         android:background="@drawable/bg_def_button_solid"
-        android:text="@string/login"
+        android:text="@string/app_login"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
