--- a/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
@@ -50,7 +50,7 @@
         android:drawableStart="@mipmap/icon_create_room"
         android:gravity="center"
         android:paddingHorizontal="50dp"
-        android:text="@string/create_room"
+        android:text="@string/ktv_create_room"
         android:textColor="@color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +65,7 @@
         android:layout_marginHorizontal="47dp"
         android:layout_marginTop="60dp"
         android:gravity="center"
-        android:text="@string/create_tips1"
+        android:text="@string/ktv_create_tips1"
         android:textColor="@color/def_text_color_3c4"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
         android:drawableStart="@mipmap/icon_create_room"
         android:gravity="center"
         android:paddingHorizontal="50dp"
-        android:text="@string/create_room"
+        android:text="@string/ktv_create_room"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
