--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_more.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_more.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/more_actions"
+        android:text="@string/ktv_more_actions"
         android:textColor="@color/def_text_color_white"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/song_background"
+        android:text="@string/ktv_song_background"
         android:textColor="@color/def_text_grey_6c7"
         app:layout_constraintEnd_toEndOf="@id/iBtnMV"
         app:layout_constraintStart_toStartOf="@id/iBtnMV"
