--- a/Android/app/src/main/res/menu/app_bottom_nav_menu.xml
+++ b/Android/app/src/main/res/menu/app_bottom_nav_menu.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/btn_home_index_selector"
-        android:title="@string/title_home" />
+        android:title="@string/app_title_home" />
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/btn_home_faxian_selector"
-        android:title="@string/title_find" />
+        android:title="@string/app_title_find" />
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/btn_home_mine_selector"
-        android:title="@string/title_mine" />
+        android:title="@string/app_title_mine" />
 
 </menu>
