--- a/Android/scenes/ktv/src/main/res/layout/activity_room_create.xml
+++ b/Android/scenes/ktv/src/main/res/layout/activity_room_create.xml
@@ -10,7 +10,7 @@
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/title_view"
         style="@style/title_view"
-        app:ctv_centerText="@string/create_room"
+        app:ctv_centerText="@string/ktv_create_room"
         tools:ignore="MissingConstraints" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
-        android:text="@string/room_title"
+        android:text="@string/ktv_room_title"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:layout_marginEnd="50dp"
         android:drawableStart="@mipmap/ic_random"
         android:drawablePadding="3dp"
-        android:text="@string/random"
+        android:text="@string/ktv_random"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="30dp"
-        android:text="@string/room_is_encryption"
+        android:text="@string/ktv_room_is_encryption"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:layout_marginTop="61dp"
         android:button="@drawable/bg_cb_check_status_def"
         android:checked="true"
-        android:text="@string/open"
+        android:text="@string/ktv_open"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etRoomName" />
 
@@ -92,7 +92,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="61dp"
         android:button="@drawable/bg_cb_check_status_def"
-        android:text="@string/encryption"
+        android:text="@string/ktv_encryption"
         app:layout_constraintStart_toEndOf="@id/cbOpen"
         app:layout_constraintTop_toBottomOf="@id/etRoomName" />
 
@@ -136,7 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="@string/please_input_4_pwd"
+        android:text="@string/ktv_please_input_4_pwd"
         android:textColor="@color/red_fa"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/etCode1"
@@ -147,7 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:drawableStart="@mipmap/ic_tip"
-        android:text="@string/create_tips2"
+        android:text="@string/ktv_create_tips2"
         android:textColor="@color/def_text_grey_6c7"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/btnCreate"
@@ -158,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="@string/create_tips3"
+        android:text="@string/ktv_create_tips3"
         android:textColor="@color/def_text_grey_6c7"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/btnCreate"
@@ -174,7 +174,7 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/bg_def_button_solid"
         android:gravity="center"
-        android:text="@string/create"
+        android:text="@string/ktv_create"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
