--- a/Android/scenes/ktv/src/main/res/layout/ktv_fragment_beauty_voice.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_fragment_beauty_voice.xml
@@ -48,31 +48,31 @@
                 style="@style/ktvBeautyBtnStyle"
                 android:checked="true"
                 android:drawableTop="@drawable/bg_rbtn_def_nothing"
-                android:text="@string/def_nothing" />
+                android:text="@string/ktv_def_nothing" />
 
             <RadioButton
                 android:id="@+id/rBtnBigMan"
                 style="@style/ktvBeautyBtnStyle"
                 android:drawableTop="@drawable/bg_rbtn_big_man"
-                android:text="@string/room_big_man" />
+                android:text="@string/ktv_room_big_man" />
 
             <RadioButton
                 android:id="@+id/rBtnSmallMan"
                 style="@style/ktvBeautyBtnStyle"
                 android:drawableTop="@drawable/bg_rbtn_small_man"
-                android:text="@string/room_small_man" />
+                android:text="@string/ktv_room_small_man" />
 
             <RadioButton
                 android:id="@+id/rBtnBigWoman"
                 style="@style/ktvBeautyBtnStyle"
                 android:drawableTop="@drawable/bg_rbtn_big_woman"
-                android:text="@string/room_big_woman" />
+                android:text="@string/ktv_room_big_woman" />
 
             <RadioButton
                 android:id="@+id/rBtnSmallWoman"
                 style="@style/ktvBeautyBtnStyle"
                 android:drawableTop="@drawable/bg_rbtn_small_woman"
-                android:text="@string/room_small_woman" />
+                android:text="@string/ktv_room_small_woman" />
         </RadioGroup>
     </HorizontalScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
