--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_room_speaker.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_room_speaker.xml
@@ -64,7 +64,7 @@
         android:layout_marginTop="2dp"
         android:drawableStart="@mipmap/ic_zc"
         android:drawablePadding="2dp"
-        android:text="@string/zc"
+        android:text="@string/ktv_zc"
         android:textColor="@color/white"
         android:textSize="8sp"
         android:visibility="gone"
