--- a/Android/scenes/show/src/main/res/layout/show_live_link_request_message_list.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_request_message_list.xml
@@ -4,12 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textLinking"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
