--- a/Android/scenes/show/src/main/res/layout/show_live_link_invitation_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_invitation_dialog.xml
@@ -55,6 +55,7 @@
         style="@style/def_btn_full"
         android:layout_marginHorizontal="10dp"
         android:textColor="@color/white"
+        android:text="@string/confirm"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="@id/tvTitle"
