--- a/Android/scenes/show/src/main/res/layout/show_live_detail_video_link.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_video_link.xml
@@ -5,8 +5,10 @@
     android:layout_height="match_parent"
     android:background="@color/grey_5B">
 
-    <SurfaceView
-        android:id="@+id/linkAudienceSurfaceview"
-        android:layout_width="109dp"
-        android:layout_height="163dp" />
+<!--    <SurfaceView-->
+<!--        android:id="@+id/linkAudienceSurfaceview"-->
+<!--        android:layout_marginTop="110dp"-->
+<!--        android:layout_marginLeft="246dp"-->
+<!--        android:layout_width="109dp"-->
+<!--        android:layout_height="163dp" />-->
 </FrameLayout>
