--- a/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
@@ -27,6 +27,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/iBtnSeatApply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/show_apply_onseat"
+        app:layout_constraintBottom_toBottomOf="@id/textLinking"
+        app:layout_constraintEnd_toEndOf="@id/textLinking"
+        app:layout_constraintTop_toTopOf="@id/textLinking" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/iBtnCancelApply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/show_cancel_linking"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/textLinking"
+        app:layout_constraintEnd_toEndOf="@id/textLinking"
+        app:layout_constraintTop_toTopOf="@id/textLinking" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/iBtnStopLink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/show_stop_linking"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/textLinking"
+        app:layout_constraintEnd_toEndOf="@id/textLinking"
+        app:layout_constraintTop_toTopOf="@id/textLinking" />
+
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh_layout"
         android:layout_width="match_parent"
@@ -39,13 +71,13 @@
             android:layout_height="wrap_content" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/linkInvitationList"
+            android:id="@+id/linkRequestList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="1"
-            tools:listitem="@layout/show_live_link_invitation_message" />
+            tools:listitem="@layout/show_live_link_request_message" />
 
         <com.scwang.smart.refresh.footer.ClassicsFooter
             android:layout_width="match_parent"
@@ -59,7 +91,7 @@
         android:layout_marginTop="154dp"
         android:drawablePadding="12dp"
         android:gravity="center"
-        android:text="@string/show_empty_online_audience"
+        android:text="@string/show_empty_onseat_apply"
         android:textColor="@color/def_text_grey_979"
         android:textSize="14sp"
         android:visibility="visible"
