--- a/Android/scenes/show/src/main/res/layout/show_live_link_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_dialog.xml
@@ -14,8 +14,8 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="23dp"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
         android:checkedButton="@id/rBtnRequestMessage"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatRadioButton
@@ -32,20 +32,37 @@
             android:id="@+id/rBtnOnlineUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="130dp"
+            android:layout_marginStart="110dp"
             android:button="@null"
             android:gravity="center"
             android:text="@string/show_online_audience"
-            android:textColor="@color/grey_to_white"
+            android:textColor="@color/black"
             android:textSize="16sp" />
     </RadioGroup>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/rBtnRequestText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="23dp"
+        android:button="@null"
+        android:gravity="center"
+        android:text="@string/show_linking_request_message"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:visibility="gone"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="500dp"
+        android:layout_marginTop="16dp"
         android:overScrollMode="never"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
